# you_personal_assistant_hw2

./: Dockerfile  README.md  banch.py  console_interface.py  data.json  main.py  notes.py  pyproject.toml  readme.md  setup.py
data/: data.json
modules/: __init__.py  address_book.data  address_book.py  file_manager.py  notes.data  notes.py  tags.data
rizun/: data.json  main.py  test.py
