[tool.poetry]
name = "you-personal-assistant-hw2"
version = "0.1.0"
description = "command line personal assistant with addressbook and notes"
authors = ["Sasha <palienkoa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
prompt-toolkit = "3.0.43"
rich = "^13.7.1"
pathlib = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
